# BTC-Light

./: .env.example  .gitignore  AGENTS.md  PRD.md  SPECS.md  backend  backend.sh  backtest.py  orchestrator.py  requirements.txt  run.py  start_dashboard.py
agent_layer/: agents.py  openrouter_agents.py
backtesting/: __init__.py  execution.py  metrics.py  profiles.py  reporting.py  runner.py  snapshot.py  tuning.py
config/: settings.py
dashboard/: package-lock.json  package.json
dashboard/app/: layout.tsx  page.tsx
dashboard/lib/: api.ts  use-websocket.ts
dashboard_api/: db_models.py  main.py  models.py
data/: external_feeds.py  historical_loader.py  ingest_yahoo.py
docs/: CLAUDE.md  README.md  plan1.md
docs/reports/: report1.md
execution_engine/: Cargo.toml
execution_engine/src/: config.rs  main.rs  models.rs  position_manager.rs  redis_bridge.rs  safety.rs
history/BTCUSD/2025/: BTCUSD-15m-2025-12.csv  BTCUSD-1d-2025-12.csv  BTCUSD-4h-2025-12.csv
history/BTCUSD/2026/: BTCUSD-15m-2026-01.csv  BTCUSD-15m-2026-02.csv  (+7 more)
reports/: report2.md  report3.md  report4.md  report5.md
rules_engine/: execution.py  safety.py
shared/: db.py  redis_client.py  time_utils.py
statistical_engine/: change_point.py  correlation.py  efficiency.py  engine.py  probability.py  regime.py  tail_risk.py  trend.py  volatility.py
strategy/: 20% annual strategy.md  33% annual strategy.md  70% annual strategy.md
tests/: test_agents_and_orchestration.py  test_data_and_clients.py  test_historical_backtesting.py  test_rules_execution.py  test_statistical_analyzers.py
(+61 files in other folders)
