[package]
name = "execution_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
redis = { version = "0.29", features = ["tokio-comp"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.16", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
tokio-stream = "0.1"
futures-util = "0.3"
